Submission 1 MADE : Modularization, add core module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,5 @@
 <resources>
     <string name="app_name">MovieApp</string>
-    <string name="movie_poster">Movie poster</string>
-    <string name="movie_title">Movie Title</string>
-    <string name="star_icon">Star icon</string>
-    <string name="rating_sample">8.3</string>
-    <string name="genre">Genre: Action</string>
-    <string name="date_released">Date released: 2021–04–20</string>
     <string name="backdrop_image">Backdrop Image</string>
     <string name="_18">18 +</string>
     <string name="overview">Overview</string>
@@ -23,13 +17,13 @@
     </string>
     <string name="genres">"Genres"</string>
     <string name="genres_sample">• Action\n• Romance</string>
-    <string name="_2020_04_20">2020-04-20</string>
+    <string name="_2020_04_20">2020–04–20</string>
     <string name="date_released_title">Date released</string>
     <string name="tv_title">Tv Show Title</string>
     <string name="first_on_air_date">First On-Air Date</string>
     <string name="en">EN</string>
+    <string name="add_to_favorite">Add To Favorite</string>
     <string name="only_favorite">Show Favorites Only</string>
     <string name="on">On</string>
     <string name="off">Off</string>
-    <string name="add_to_favorite">Add To Favorite</string>
 </resources>
