Submission 1 MADE : Add favorite module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="only_favorite">Show Favorites Only</string>
     <string name="on">On</string>
     <string name="off">Off</string>
+    <string name="title_favorite">Favorite</string>
 </resources>
